deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventguesser
  namespace: eventguesser
spec:
  type: ClusterIP
  selector:
    app: eventguesser
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
