deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventguesser-ingress
  namespace: eventguesser
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  ingressClassName: traefik
  rules:
    - host: what-worldcup.yaaha.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventguesser
                port:
                  number: 8080
  tls:
    - hosts:
        - what-worldcup.yaaha.net
